# ur_perception

./: .gitmodules  readme.md
Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py
dh_gripper_msgs/: CMakeLists.txt  package.xml
dh_gripper_msgs/msg/: GripperRotState.msg  GripperState.msg
dh_robotics_ag95_description/: CMakeLists.txt  package.xml
dh_robotics_ag95_description/config/: dh_controllers.yaml
dh_robotics_ag95_description/launch/: gazebo_ros2_control.launch.py
dh_robotics_ag95_description/urdf/: dh_robotics_ag95_gripper.urdf.xacro  dh_robotics_ag95_gripper.xacro  dh_robotics_ag95_gripper_ros2_control.xacro
gripper_joint_publisher/: package.xml  setup.cfg  setup.py
gripper_joint_publisher/gripper_joint_publisher/: pub.py
gripper_socket/: package.xml  setup.cfg  setup.py
gripper_socket/gripper_socket/: gripper_socket.py  test_server.py
gripper_socket/launch/: connect.launch.py
hdz_simplified/: CMakeLists.txt  package.xml
hdz_simplified/config/: view_robot.rviz
hdz_simplified/launch/: display.launch  gazebo.launch  view_robot.launch.py
hdz_simplified/meshes/: base_link.STL  hdz_arm_frame.STL  hdz_extend_board_link.STL  hdz_steel_frame_link.STL  hdz_steel_frame_link.mtl  hdz_steel_frame_link.stl  hdz_up_board.STL  hdz_ur_control_cabinet_link.STL
hdz_simplified/urdf/: hdz_simplified.csv  hdz_simplified.urdf  hdz_simplified.xacro  hdz_simplified_macro.xacro
move_grasp/: .clang-format  CMakeLists.txt  package.xml
move_grasp/launch/: move_grasp.launch.py
move_grasp/src/: move_grasp.cpp  timer.hpp
move_grasp_msg/: CMakeLists.txt  package.xml
move_grasp_msg/srv/: GetEndEffectorPose.srv  GetJointPosition.srv  Grasp.srv  MoveTo.srv  MoveToJointPosition.srv  MoveToNamed.srv  Plan.srv
performance_test/: package.xml  setup.cfg  setup.py
performance_test/performance_test/: planning_test.py
robot_description_echo/: package.xml  setup.cfg  setup.py
robot_description_echo/scripts/: robot_description_echo.py
robotiq/: CMakeLists.txt  package.xml
robotiq/urdf/: robotiq_85_gripper.urdf.xacro
src/ttt/: CMakeLists.txt  package.xml
ur_perception_description/: CMakeLists.txt  package.xml
ur_perception_description/config/: easy_handeye_eye_on_hand.yaml  initial_positions.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  ur_controllers.yaml  view_robot.rviz
ur_perception_description/config/ur5e/: ur5e_calibration.yaml
ur_perception_description/launch/: robot_state_publisher.launch.py  ur_moveit.launch.py  view_robot.launch.py
ur_perception_description/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
ur_perception_description/urdf/: d435i.xacro  dh_ag95_gripper.xacro  gazebo_rgbd.xacro  hdz.urdf.xacro  hdz_with_ur.urdf.xacro  robotiq.xacro  ue5e_perception.urdf.xacro  ur5e.urdf.xacro
ur_perception_gazebo_sim/: CMakeLists.txt  package.xml
ur_perception_gazebo_sim/config/: ur_controllers.yaml
ur_perception_gazebo_sim/gazebo_world/: cafe_earthquake.world  cafe_earthquake.xml  s4.xml  simple_world.xml
ur_perception_gazebo_sim/launch/: sim_control.launch.py  sim_moveit.launch.py
ur_perception_gazebo_sim/rviz/: view_robot_perception.rviz
ur_perception_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_perception_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur5e_rgbd.ros2_control.xacro  ur5e_rgbd.srdf  ur5e_rgbd.urdf.xacro
ur_perception_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_perception_moveit_launcher/: CMakeLists.txt  package.xml
ur_perception_moveit_launcher/launch/: move_group.launch.py  ur_moveit.launch.py
ur_perception_moveit_launcher/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
ur_perception_real_robot/: CMakeLists.txt  package.xml
ur_perception_real_robot/launch/: ur_control.launch.py  ur_moveit.launch.py
ur_perception_real_robot/rviz/: view_robot.rviz
ur_perception_scripts/: package.xml  setup.cfg  setup.py
ur_perception_scripts/ur_perception_scripts/: __init__.py  robot_description_content.py
