<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>performance_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1023515576@qq.com">xy</maintainer>
  <license>MIT</license>

  <depend>move_grasp</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
